# Demo-Drawer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Glfw.cbp  TextureStreamer.cbp  TextureStreamerDemo.workspace  main.cpp
src/: CMakeLists.txt  ChanceBasedDrawer.cpp  ChanceBasedDrawer.h  Color3b.cpp  Color3b.h  Color4b.cpp  Color4b.h  Color4f.cpp  Color4f.h  ColorUtil.cpp  ColorUtil.h  ContainerType.h  Field.h  Filters.cpp  Filters.h  IColorFilter.h  IColorGenerator.h  IContainer.h  IDrawer.h  IPointsTraverser.h  ITopology.h  OutOfRangeException.h  Point.cpp  PointsTraverserType.h  QueueContainer.cpp  QueueContainer.h  StackContainer.cpp  StackContainer.h  main.cpp
src/ColorGeneration/: Bouncing.cpp  Bouncing.h  BouncingColor3bFilter.cpp  BouncingColor3bFilter.h  BouncingColor4bFilter.cpp  BouncingColor4bFilter.h  BouncingColor4fFilter.cpp  BouncingColor4fFilter.h  BouncingColorGenerator.cpp  BouncingColorGenerator.h  CMakeLists.txt  FilteredColorGenerator.h  LowPassColor4fFilter.cpp  LowPassColor4fFilter.h  RandomColor4fGenerator.cpp  RandomColor4fGenerator.h  RandomColorGenerator.h  RecurrentFilteringColorGenerator.h  SingleColorGenerator.cpp  SingleColorGenerator.h
src/Drawing/: CMakeLists.txt  ChanceBasedDrawer.cpp  ChanceBasedDrawer.h  IPointPicker.h  IPointPusher.h  IPointsTraverser.h  PointsTraverserDrawer.cpp  PointsTraverserDrawer.h  QueuePopWithChanceDrawer.cpp  QueuePopWithChanceDrawer.h  QueuePushWithChanceDrawer.cpp  QueuePushWithChanceDrawer.h  RandomDrawer.cpp  RandomDrawer.h  StackPopWithChanceDrawer.cpp  StackPopWithChanceDrawer.h  StackPushWithChanceDrawer.cpp  StackPushWithChanceDrawer.h
src/Drawing/PointPicking/: CMakeLists.txt  ChanceBasedPointPicker.cpp  ChanceBasedPointPicker.h  PointFromEndPicker.h  PointFromStartPicker.cpp  PointFromStartPicker.h  RandomPointPicker.cpp  RandomPointPicker.h
src/Drawing/PointPushing/: CMakeLists.txt  ChanceBasedPointPusher.cpp  ChanceBasedPointPusher.h  PointToEndPusher.h  PointToStartPusher.h  RandomPointPusher.cpp  RandomPointPusher.h
src/Drawing/PointTraversal/: CMakeLists.txt  ChanceBasedPointsTraverser.h  Neighbour4PointsTraverser.h
src/PointTraversal/: ChanceBasedPointsTraverser.h  Neighbour4PointsTraverser.h
src/Rendering/: CMakeLists.txt  FileUtil.cpp  FileUtil.h  ShaderException.cpp  ShaderException.h  ShaderType.h  ShaderUtil.cpp  ShaderUtil.h  TexUtil.cpp  TexUtil.h
src/Topologies/: CMakeLists.txt  CroppedTopology.h  ThorusTopology.h
(+96 files in other folders)
